[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/cactus/CactusDefeated.gd" type="Script" id=1]
[ext_resource path="res://entities/cactus/CactusDefeatedStateMachine.gd" type="Script" id=2]
[ext_resource path="res://assets/Actors/Markis/SeparateAnim/Idle.png" type="Texture" id=3]
[ext_resource path="res://assets/Actors/Markis/SeparateAnim/Jump.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "dancing",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 11.5047

[sub_resource type="CircleShape2D" id=7]
radius = 28.8448

[node name="Markis" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.340553, 0.170289 )
scale = Vector2( 1.20221, 1.1756 )
frames = SubResource( 5 )
animation = "dancing"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.340576, 0.340561 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.594604, 0 )
shape = SubResource( 7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
